added homepage in package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avinash-portfolio",
-  "homepage": "",
+  "homepage": "https://avinash-rdy2903.github.io/avinash-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
