--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-dom": "18.3.1",
     "react-ga": "^3.1.2",
     "react-scripts": "^5.0.1",
-    "react-switch": "^5.0.1",
-    "react-typical": "^0.1.3",
+    "react-switch": "7.0.0",
+    "react-typical": "0.1.3",
     "react-vertical-timeline-component": "^3.3.1"
   },
   "scripts": {
